--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/scriptaculous"]
 	path = vendor/scriptaculous
 	url = git://github.com/madrobby/scriptaculous.git
+[submodule "vendor/sprockets"]
+	path = vendor/sprockets
+	url = git://github.com/sstephenson/sprockets.git
