--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.5.0",
+    "jest": "^24.5.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.1",
     "rollup": "^0.66.2",
@@ -17,7 +21,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "start:dev": "sirv public --dev",
+    "test": "jest"
   },
   "dependencies": {}
 }
