--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "scripts": {
+    "prettier": "prettier --write --single-quote \"./*.js\" \"src/**/*.js\"",
     "test": "jest",
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
